<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackgrund"
    tools:context=".Gym">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="60sp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hi!"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="100sp" />

        <TextView
            android:layout_marginLeft="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/message3"/>

        <TextView
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/messagefirts"/>

        <TextView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAutor"
            android:text="@string/Autor"
            android:textColor="@color/colorCianGray"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---------------------------->"
            android:textColor="@color/colorGray"
            android:textStyle="italic"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:gravity="center"

        >

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_rounder"
            android:text="@string/ir"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:textColor="@color/colorCianGray"
            android:textSize="14sp"
            android:textStyle="bold"/>



    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>