<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackgrund">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="10sp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgVolver"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="10sp"
            android:textColor="@color/colorWhite"
            android:text="@string/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            android:text="@string/message2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25sp">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/ic_person"/>

                <EditText
                    android:id="@+id/registerUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintUsername"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25sp">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/ic_email"/>
                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Email"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25sp">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="password"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="60sp"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="70dp">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="Registrar"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounder_button"

                />




        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorGray"
            android:text="@string/countExist"/>
        <TextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorBlueGray"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="8sp"
            android:text="@string/back"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>